added user current position

--- a/index.html
+++ b/index.html
@@ -6,19 +6,16 @@
     <title>DTU NAKSHA</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@500;600&display=swap" rel="stylesheet">
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPRZ-JAY7VqiVOA8m8LM2MAxR99dcFeJ0&map_ids=17dba89734a03882&callback=initMap"
+    ></script>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <h1>delhi technological university</h1>
     <div id="map"></div>
     <script src="script.js"></script>
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPRZ-JAY7VqiVOA8m8LM2MAxR99dcFeJ0&map_ids=17dba89734a03882&callback=initMap"
-    ></script>
 </body>
 </html>
