--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <h1>delhi technological university</h1>
     <div id="map"></div>
+    <div id="errorOutput"></div>
     <script src="script.js"></script>
 </body>
 </html>
