--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
-<body>
+<body class="back">
     <h1>delhi technological university</h1>
     <div id="map"></div>
-    <div id="errorOutput"></div>
+    <div id="errorOutput">
+      <div id="errorImage"></div>
+      <div id="errorText"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
